[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/inventory/craftingDisplay.png" type="Texture" id=1]
[ext_resource path="res://UI/inventory/craftingDisplay.gd" type="Script" id=2]
[ext_resource path="res://baseTheme.tres" type="Theme" id=3]
[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/inventory/craft.png" type="Texture" id=5]
[ext_resource path="res://UI/inventory/craftHover.png" type="Texture" id=6]
[ext_resource path="res://UI/inventory/craftDisabled.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 4 )

[node name="TextureRect" type="TextureRect"]
margin_right = 216.0
margin_bottom = 337.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="name" type="Label" parent="."]
margin_top = 8.0
margin_right = 216.0
margin_bottom = 44.0
theme = ExtResource( 3 )
align = 1

[node name="icon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -96.5
margin_right = 36.0
margin_bottom = -16.5
size_flags_horizontal = 7
size_flags_vertical = 7
expand = true
stretch_mode = 6

[node name="craftButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 103.5
margin_right = 50.0
margin_bottom = 145.5
theme = ExtResource( 3 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )

[node name="resourceContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = 9.5
margin_right = 89.0
margin_bottom = 79.5
custom_constants/separation = 80
alignment = 1

[node name="required" type="Label" parent="."]
visible = false
margin_left = 80.0
margin_top = 166.0
margin_right = 137.0
margin_bottom = 180.0
text = "Required"
align = 1

[node name="maxLevelLabel" type="Label" parent="."]
visible = false
margin_left = 97.0
margin_top = 44.0
margin_right = 315.0
margin_bottom = 97.0
rect_rotation = 71.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Max Level"
align = 1
valign = 1

[connection signal="pressed" from="craftButton" to="." method="_on_craftButton_pressed"]
